--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
   <p>We do not sell, trade, or rent your personal data to others.</p>
 
   <h2>5. Contact</h2>
-  <p>If you have any questions, please contact us at mutualtransferbihar@gmail.com</p>
+  <p>If you have any questions, please contact us at iamsohrabalam@gmail.com</p>
 </body>
 </html>
