--- a/index.html
+++ b/index.html
@@ -3,31 +3,45 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Privacy Policy</title>
+  <title>Privacy Policy - Mutual Teacher Transfer Bihar</title>
 </head>
 <body>
-  <h1>Privacy Policy for Mutual Teacher Transfer Bihar</h1>
-  <p>Effective Date: July 21, 2025</p>
-  <p>This Privacy Policy explains how we collect, use, and protect your personal information when you use the Mutual Teacher Transfer Bihar app.</p>
-  
+  <h1>Privacy Policy</h1>
+  <p><strong>Effective Date:</strong> July 21, 2025</p>
+
+  <p>This Privacy Policy describes how the Mutual Teacher Transfer Bihar app ("we", "our", or "us") collects, uses, and protects your information. By using the app, you agree to the practices described in this policy.</p>
+
   <h2>1. Information We Collect</h2>
-  <p>We collect the following information:</p>
+  <p>We may collect the following information when you use our app:</p>
   <ul>
-    <li>Teacher Profile Information (Name, Post, District, Block, etc.)</li>
-    <li>Transfer Preferences</li>
+    <li>Full name, post, school, district, and block (teacher profile)</li>
+    <li>Transfer preferences</li>
     <li>Email address (if provided)</li>
+    <li>Device information (non-personal, for analytics or crash reporting)</li>
   </ul>
 
   <h2>2. How We Use Your Information</h2>
-  <p>We use your information to help teachers find matching mutual transfer partners within Bihar.</p>
+  <p>The information collected is used strictly for the following purposes:</p>
+  <ul>
+    <li>To help teachers find mutual transfer matches</li>
+    <li>To improve the app experience</li>
+    <li>To communicate important updates</li>
+  </ul>
 
   <h2>3. Data Security</h2>
-  <p>We use secure cloud databases and restrict access to protect your data.</p>
+  <p>Your data is stored securely using encrypted cloud services with access limited only to authorized personnel. We regularly review our security practices to protect your data.</p>
 
   <h2>4. Data Sharing</h2>
-  <p>We do not sell, trade, or rent your personal data to others.</p>
+  <p>We do not sell, rent, or trade your personal information. Your data is never shared with third parties except when legally required.</p>
 
-  <h2>5. Contact</h2>
-  <p>If you have any questions, please contact us at iamsohrabalam@gmail.com</p>
+  <h2>5. Your Rights</h2>
+  <p>You may contact us to view, correct, or delete your data at any time.</p>
+
+  <h2>6. Changes to This Policy</h2>
+  <p>We may update this Privacy Policy occasionally. The latest version will always be available at this page.</p>
+
+  <h2>7. Contact Us</h2>
+  <p>If you have any questions or concerns regarding this Privacy Policy, you can contact us at:</p>
+  <p>Email: <a href="mailto:iamsohrabalam@gmail.com">iamsohrabalam@gmail.com</a></p>
 </body>
 </html>
